# neuropipeline2

./: LICENSE  pyproject.toml  requirements.txt  setup.py
neuropipeline2/: eeg.py  fnirs.py  module1.py
tests/: test_module2.py
