[build-system] 
requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.build_meta" 
 
[project] 
name = "neuropipeline2" 
version = "0.1.0" 
authors = [ 
  { name = "Your Name", email = "your.email@example.com" }, 
] 
description = "A short description of my project." 
readme = "README.md" 
requires-python = ">=3.6" 
classifiers = [ 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent", 
] 
 
[project.urls] 
"Homepage" = "https://github.com/yourusername/neuropipeline2" 
"Bug Tracker" = "https://github.com/yourusername/neuropipeline2/issues" 
